--- a/assets/style.css
+++ b/assets/style.css
@@ -24,19 +24,19 @@ pre code {
   top: 0;
   left: 0;
   right: 0;
-  height: 220px;
+  height: 200px;
   /*background-image: url("images/books.jpg");*/
   /*background-color: #193a5c;*/
 }
 
 .hero-image {
   width: 100%;
-  height: 220px;
-  object-fit: cover;
+  height: 80%;
+  /*object-fit: cover;*/
 }
 
 .page-inner {
-  padding-top: 180px !important;
+  padding-top: 140px !important;
 }
 
 
