--- a/assets/style_ITN_coursera.css
+++ b/assets/style_ITN_coursera.css
@@ -263,3 +263,24 @@ li.appendix span, li.part span { /* for TOC part names */
   font-size: .85em;
   color: #193a5c;
 }
+/*Get rid of TOC stuff from https://github.com/rstudio/bookdown/issues/1251 */
+
+.book .book-body .page-wrapper .page-inner {
+  max-width: 100% !important;
+}
+
+.book.with-summary .book-header.fixed {
+    left: 0%;
+}
+
+.book.with-summary .book-body {
+    left: 0%;
+}
+
+.book.with-summary .book-summary {
+    width: 0%;
+}
+
+.book-body.fixed > div > .book-header.fixed > a:nth-child(1) {
+  visibility: hidden;
+}
