updating paths for style.css file for general template use

--- a/assets/style.css
+++ b/assets/style.css
@@ -265,7 +265,7 @@ div.notice{
 }
 
 div.notice{
-  background-image: url("../assets/note.png");
+  background-image: url("../assets/box_images/note.png");
 }
 
 div.warning{
@@ -282,7 +282,7 @@ div.warning{
 }
 
 div.warning{
-  background-image: url("../assets/warning.png");
+  background-image: url("../assets/box_images/warning.png");
 }
 
 
@@ -301,7 +301,7 @@ div.github{
 }
 
 div.github{
-  background-image: url("../assets/github.png");
+  background-image: url("../assets/box_images/github.png");
 }
 
 div.dictionary{
@@ -318,7 +318,7 @@ div.dictionary{
 }
 
 div.dictionary{
-  background-image: url("../assets/dictionary.png");
+  background-image: url("../assets/box_images/dictionary.png");
 }
 
 
