--- a/style-sets/fhdasl/copy_to_assets/style.css
+++ b/style-sets/fhdasl/copy_to_assets/style.css
@@ -253,7 +253,7 @@ li.appendix span, li.part span { /* for TOC part names */
 /* Sidebar formating --------------------------------------------*/
 /* from r-pkgs.org*/
 
-div.notice, div.warning, div.github, div.dictionary, div.reflection, div.terminal {
+div.notice, div.warning, div.github, div.dictionary, div.reflection {
   border-style: solid;
   padding: 1em;
   margin: 1em 0;
@@ -301,15 +301,6 @@ div.reflection{
   background-color: #e8ebee;
   background-image: url("../assets/box_images/thinking_face.png");
 }
-
-div.terminal{
-  border: 4px #00C1D5;
-  background-size: 70px;
-  background-position: 15px center;
-  background-color: #e8ebee;
-  background-image: url("../assets/box_images/terminal.png");
-}
-
 
 /* .book .book-body .page-wrapper .page-inner section.normal is needed
    to override the styles produced by gitbook, which are ridiculously
